# fraud-explanation-eval

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  collect_review_files.sh  docker-compose.yml  pyproject.toml  scaffold_fraud_explanation_eval.sh
.claude/commands/: agent-review.md  cost-check.md  hallucination-check.md  security-check.md  start-phase.md
.claude/hooks/: check-secrets.sh  pre-commit.sh  pre-session.sh
.claude/skills/: agent-contracts.md  phase-context.md  test-patterns.md
.github/workflows/: ci.yml
docs/: ADR.md  COST_BUDGET.md  PHASE_LOG.md  SECURITY.md
docs/specs/: DETECTOR_SPEC.md  EVAL_SPEC.md  EXPLANATION_SPEC.md
evals/: EVAL_RESULTS.md  run_adversarial_scenarios.py  run_golden_scenarios.py
grafana/dashboards/: cost_dashboard.json
prometheus/: prometheus.yml
scripts/: cost_report.py  run_pipeline.py  train_model.py
src/agents/: __init__.py  eval_agent.py  explanation_agent.py
src/api/: __init__.py  auth.py  main.py  schemas.py
src/data/: __init__.py  loader.py  preprocessor.py
src/models/: __init__.py  detector.py  shap_extractor.py
src/orchestrator/: __init__.py  graph.py  state.py
src/schemas/: detection.py  explanation.py  transactions.py
src/security/: sanitizer.py
src/utils/: cost_tracker.py  logging_config.py
tests/: conftest.py
tests/adversarial/: test_data_leakage.py  test_hallucination.py  test_injection.py
tests/golden/: scenarios.json
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_data_pipeline.py  test_detector.py  test_eval_agent.py  test_schemas.py  (+2 more)
(+2 files in other folders)
