[tool.poetry]
package-mode = false
name = "fraud-explanation-eval"
version = "0.1.0"
description = "XGBoost fraud detection with SHAP-grounded LLM explanation evaluation"
authors = ["Roy"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6"
xgboost = "^2.0"
shap = "^0.44"
pandas = "^2.1"
numpy = "^1.26"
scikit-learn = "^1.4"
imbalanced-learn = "^0.14.1"
litellm = "^1.30"
instructor = "^1.2"
langgraph = "^0.2"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
slowapi = "^0.1.9"
prometheus-client = "^0.20"
python-dotenv = "^1.0"
tenacity = "^8.2"
pyarrow = "^23.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
pytest-recording = "^0.13"
ruff = "^0.4"
black = "^24.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85 --cov-branch"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP007", "N803", "N806"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
